# advisor

./: .dockerignore  .env.default  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.devcontainer/: Dockerfile  aliases.sh  devcontainer.json  docker-compose.yml  setup.sh
.docker/: Dockerfile.dev
.github/workflows/: rust.yml
lib/src/edgar/: filing.rs
migrations/: 001_create_conversations_and_memory.sql  002_add_user_id.sql  003_indices.sql  20240321000000_create_indices.down.sql  20240321000000_create_indices.up.sql
scripts/: dev-setup.sh  setup_db.sh
src/: auth.rs  completer.rs  db.rs  document.rs  eval.rs  lib.rs  main.rs  memory.rs  query.rs  repl.rs  storage.rs  tokens.rs  vectorstore.rs
src/core/: config.rs  init.rs  mod.rs  service.rs  types.rs
src/earnings/: mod.rs  query.rs
src/edgar/: completer.rs  filing.rs  index.rs  mod.rs  query.rs  rate_limiter.rs  report.rs  tickers.rs  utils.rs  xbrl.rs
src/edgar/parsing/: document.rs  facts.rs  header.rs  mod.rs  section.rs  text.rs  types.rs  xbrl.rs
src/edgar/parsing/tests/: mod.rs
src/edgar/parsing/tests/data/: tsla-20230930.htm
src/edgar/parsing/xbrl/: mod.rs
src/edgar/parsing/xbrl/parser/: xml.rs
src/edgar/tests/: filing_tests.rs
src/edgar/tests/AAPL/: filing.json
src/fetch/: mod.rs
src/storage/: memory.rs  mod.rs  qdrant.rs  sqlite.rs
src/utils/: dirs.rs  http.rs  mod.rs  progress.rs  rate_limit.rs  terminal.rs
tests/: filing_tests.rs
