[package]
name = "advisor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advisor"
path = "src/main.rs"

[[bin]]
name = "xbrl_parser"
path = "src/bin/xbrl_parser.rs"

[lib]
name = "advisor"
path = "src/lib.rs"

[dependencies]
security-framework = "3.0.0"
structopt = "0.3"
tokio = { version = "1.25.0", features = ["full"] }
once_cell = "1.18.0"
env_logger = "0.11.5"
log = "0.4.17"
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json", "gzip"]}
sled = "0.34"
url = "2.5.2"
chardet = "0.2"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
regex = "1.5"
html-escape = "0.2"
uuencode = "0.1.5"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
scraper = "0.20.0"
tokenizers = { version = "0.20.1", features = ["progressbar", "http"] }
langchain-rust = "4.6.0"
strum = { version = "0.25", features = ["derive"] }
quick-xml = "0.37.0"
unicode-normalization = "0.1.24"

[dev-dependencies]
tempfile = "3.2"
