[package]
name = "advisor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advisor-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "advisor-server"
path = "src/bin/server.rs"

[lib]
name = "advisor"
path = "src/lib.rs"

[dependencies]
colored = "2.1.0"
security-framework = "3.0.0"
structopt = "0.3"
tokio = { version = "1.25.0", features = ["full", "rt-multi-thread"] }
once_cell = "1.18.0"
env_logger = "0.11.5"
log = "0.4.17"
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json", "gzip"] }
sled = "0.34"
url = "2.5.2"
chardet = "0.2"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
regex = "1.5"
html-escape = "0.2"
uuencode = "0.1.5"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
scraper = "0.21.0"
tokenizers = { version = "0.21", features = ["progressbar", "http"] }
langchain-rust = { git="https://github.com/dredozubov/langchain-rust.git", branch = "upstream", warnings = false, features = ["postgres"] }
strum = { version = "0.26.3", features = ["derive"] }
quick-xml = "0.37.0"
unicode-normalization = "0.1.24"
roxmltree = "0.20.0"
mime = "0.3.17"
tonic = "0.12.3"
async-trait = "0.1.77"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "chrono",
    "json",
    "time",
    "uuid"
] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
pgvector = "0.4.0"
itertools = "0.13.0"
dotenv = "0.15.0"
time = { version = "0.3", features = ["serde"] }
indicatif = "0.17.9"
axum = { version = "0.7.9", features = ["macros"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
tower-http = { version = "0.5", features = ["auth"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
crossterm = "0.28.1"

[dev-dependencies]
tempfile = "3.14.0"
